<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_margin="5dp"
    android:layout_gravity="center"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/temp_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temp_c"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/temp_c"
            android:text="@string/time"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/icon_condition_hr"
            android:layout_width="57dp"
            android:layout_height="52dp"
            android:layout_below="@id/time"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="-6dp"
            android:layout_marginEnd="25dp"
            android:contentDescription="@string/icon_weather"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_baseline_search_24" />

        <TextView
            android:id="@+id/wind_kmp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon_condition_hr"
            android:text="@string/wind"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>